<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signupVM" type="com.confidents.app.modules.signup.data.viewmodel.SignupVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumncreateyouracc"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_96pxv"
        android:layout_marginEnd="@dimen/_14pxh"
        android:layout_marginStart="@dimen/_14pxh"
        android:layout_marginTop="@dimen/_73pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylelight_blue_100">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:gravity="start"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearSignup"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCreateYourAcc"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_12pxh"
                    android:singleLine="true"
                    android:text="@{signupVM.signupModel.txtCreateYourAcc}"
                    style="@style/txtPoppinsregular24" tools:text="@string/msg_create_your_acc"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearEmail"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_marginTop="@dimen/_64pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylecornerRadius_3">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtInputLabelM"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="wrap_content"
                        android:lineSpacingExtra="@dimen/_8pxh"
                        android:singleLine="true"
                        android:text="@{signupVM.signupModel.txtInputLabelM}"
                        style="@style/txtPoppinsregular16" tools:text="@string/lbl_first_name"/>
                    <EditText
                        android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_6"
                        android:ellipsize="end"
                        android:hint="@string/msg_enter_first_nam"
                        android:id="@+id/etGroup10198"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5pxv"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_4pxh"
                        android:paddingBottom="@dimen/_11pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_12pxh"
                        android:paddingTop="@dimen/_12pxv"
                        android:singleLine="true"
                        android:text="@={signupVM.signupModel.etGroup10198Value}"
                        android:textColorHint="@color/bluegray_200"
                        style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
                </LinearLayout>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearEmail1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylecornerRadius_3">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtInputLabelMOne"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="wrap_content"
                        android:lineSpacingExtra="@dimen/_8pxh"
                        android:singleLine="true"
                        android:text="@{signupVM.signupModel.txtInputLabelMOne}"
                        style="@style/txtPoppinsregular16" tools:text="@string/lbl_last_name"/>
                    <EditText
                        android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_6"
                        android:ellipsize="end"
                        android:hint="@string/lbl_enter_last_name"
                        android:id="@+id/etGroup10198One"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_4pxh"
                        android:paddingBottom="@dimen/_11pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_12pxh"
                        android:paddingTop="@dimen/_12pxv"
                        android:singleLine="true"
                        android:text="@={signupVM.signupModel.etGroup10198OneValue}"
                        android:textColorHint="@color/bluegray_200"
                        style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
                </LinearLayout>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearEmail2"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylecornerRadius_3">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtInputLabelMTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="wrap_content"
                        android:lineSpacingExtra="@dimen/_8pxh"
                        android:singleLine="true"
                        android:text="@{signupVM.signupModel.txtInputLabelMTwo}"
                        style="@style/txtPoppinsregular16" tools:text="@string/lbl_email_id"/>
                    <EditText
                        android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_6"
                        android:ellipsize="end"
                        android:hint="@string/lbl_enter_email_id"
                        android:id="@+id/etGroup10198Two"
                        android:inputType="textEmailAddress"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5pxv"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_4pxh"
                        android:paddingBottom="@dimen/_11pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_12pxh"
                        android:paddingTop="@dimen/_12pxv"
                        android:singleLine="true"
                        android:text="@={signupVM.signupModel.etGroup10198TwoValue}"
                        android:textColorHint="@color/bluegray_200"
                        style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
                </LinearLayout>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearEmail3"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylecornerRadius_3">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtInputLabelMThree"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="wrap_content"
                        android:lineSpacingExtra="@dimen/_8pxh"
                        android:singleLine="true"
                        android:text="@{signupVM.signupModel.txtInputLabelMThree}"
                        style="@style/txtPoppinsregular16" tools:text="@string/lbl_mobile_number"/>
                    <EditText
                        android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_6"
                        android:ellipsize="end"
                        android:hint="@string/msg_enter_mobile_nu"
                        android:id="@+id/etGroup10198Three"
                        android:inputType="phone"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5pxv"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_4pxh"
                        android:paddingBottom="@dimen/_11pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_12pxh"
                        android:paddingTop="@dimen/_12pxv"
                        android:singleLine="true"
                        android:text="@={signupVM.signupModel.etGroup10198ThreeValue}"
                        android:textColorHint="@color/bluegray_200"
                        style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtInputLabelMFour"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:singleLine="true"
                    android:text="@{signupVM.signupModel.txtInputLabelMFour}"
                    style="@style/txtPoppinsregular16" tools:text="@string/lbl_password"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_6"
                    android:drawableEnd="@drawable/img_eye"
                    android:drawablePadding="@dimen/_30pxh"
                    android:ellipsize="end"
                    android:hint="@string/lbl_enter_password"
                    android:id="@+id/etGroup10198Four"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:paddingBottom="@dimen/_11pxv"
                    android:paddingEnd="@dimen/_13pxh"
                    android:paddingStart="@dimen/_12pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:singleLine="true"
                    android:text="@={signupVM.signupModel.etGroup10198FourValue}"
                    android:textColorHint="@color/bluegray_200"
                    style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnCreateAccount"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:paddingBottom="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_create_account"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_4" tools:text="@string/lbl_create_account"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtConfirmation"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_116pxh"
                    android:layout_marginStart="@dimen/_116pxh"
                    android:layout_marginTop="@dimen/_72pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.03"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{signupVM.signupModel.txtConfirmation}"
                    style="@style/txtPoppinsbold12" tools:text="@string/msg_have_an_account"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
