<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="drListRowModel" type="com.confidents.app.modules.drlist.data.model.DrListRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearDoctordetail"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStylewhite_A700cornerRadius">
        <ImageView android:id="@+id/imageDrdrmyamin"
            android:layout_height="@dimen/_107pxh"
            android:layout_marginBottom="@dimen/_9pxv"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="@dimen/_107pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_19pxh}"
            imageRes="@{@drawable/img_drdrmyamin}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_drdrmyamin"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumntitle"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_11pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_weight="0.63" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end" android:id="@+id/txtTitle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{drListRowModel.txtTitle}"
                style="@style/txtIntersemibold18" tools:text="@string/msg_drg_ali_imron"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtChardiologist"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{drListRowModel.txtChardiologist}"
                style="@style/txtIntermedium12_1" tools:text="@string/lbl_sukoharjo"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRatting"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_4pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageStar"
                    android:layout_height="@dimen/_10pxh"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_10pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_star"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_star"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtRatting"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{drListRowModel.txtRatting}"
                    style="@style/txtIntermedium12_2" tools:text="@string/lbl_4_7"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtDistance"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{drListRowModel.txtDistance}"
                style="@style/txtIntermedium12_1" tools:text="@string/lbl_800m_away"/>
        </LinearLayout>
    </LinearLayout>
</layout>
