<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listassortmentofcRowModel" type="com.confidents.app.modules.dashboard.data.model.ListassortmentofcRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearArticle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStylewhite_1">
        <ImageView android:id="@+id/imageAssortmentofc"
            android:layout_height="@dimen/_54pxh"
            android:layout_marginBottom="@dimen/_6pxv"
            android:layout_marginStart="@dimen/_7pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="@dimen/_60pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_10pxh}"
            imageRes="@{@drawable/img_assortmentofc}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_assortmentofc"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnthehealthiest"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_13pxv"
            android:layout_marginEnd="@dimen/_82pxh"
            android:layout_marginStart="@dimen/_6pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_weight="0.75" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:id="@+id/txtTheHealthiest"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@{listassortmentofcRowModel.txtTheHealthiest}"
                style="@style/txtIntersemibold10" tools:text="@string/msg_the_25_healthie"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowlanguage"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguage"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{listassortmentofcRowModel.txtLanguage}"
                    style="@style/txtIntermedium8_2" tools:text="@string/lbl_jun_10_2021"/>
                <View
                    android:background="@drawable/rectangle_bg_gray_500_radius_1"
                    android:id="@+id/viewEllipseOne"
                    android:layout_height="@dimen/_2pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginTop="@dimen/_3pxv" android:layout_width="@dimen/_2pxh"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTime"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{listassortmentofcRowModel.txtTime}"
                    style="@style/txtIntermedium8_2" tools:text="@string/lbl_5min_read"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
